--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
+baseURL = "https://frabatx.com/"
+languageCode = "ita"
 title = "Frabatx"
 
 
